# ETL

./: .env.example  .gitignore  Dockerfile  README.md  data_merger.py  docker-compose.yml  migrate_etl.py  pyproject.toml  state_manager.py  validation.py  validation_classes.py
postgres_to_es/: .dockerignore  Dockerfile  config.json  data_merger.py  etl_uploader.py  film_work_process.py  genres_process.py  migrate_etl.py  migration_process.py  persons_process.py  postgres_loader.py  requirements.txt  state_manager.py  state_operator.py  transform_data.py  validation_classes.py
postgres_to_es/etl/: __main__.py  config.json  logger.py
postgres_to_es/etl/config_validation/: config.py  db_settings.py  indexes.py
postgres_to_es/etl/index_schemas/: genres.json  movies.json  persons.json
postgres_to_es/etl/migration/: __init__.py  es_upload.py  main_process.py
postgres_to_es/etl/migration/state/: __init__.py  state.py
postgres_to_es/etl/migration/state/storages/: __init__.py  base_storage.py  json_file_storage.py
postgres_to_es/state/: state.json
