[tool.poetry]
name = "elastic_etl"
version = "0.1.0"
description = ""
authors = ["Dmitrii <kachkindmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
backoff = "^2.1.2"
elasticsearch = "^8.2.3"
pydantic = "^1.9.1"
psycopg2-binary = "^2.9.3"
schedule = "^1.1.0"
ecs-logging = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
